div for country dropdown (id fixed)
fixed id

--- a/MovieMap.html
+++ b/MovieMap.html
@@ -51,7 +51,7 @@
     <!--Dropdown for Language selection-->  
     <div id="languageDropdown"></div>
     <!--Dropdown for Language selection-->  
-    <div id="languageDropdown"></div>
+    <div id="countryDropdown"></div>
       
     
   </body>
