--- a/MovieMap.html
+++ b/MovieMap.html
@@ -12,6 +12,9 @@
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
     <link type="text/css" rel="stylesheet" href="MovieMap.css">
+    <link media="all" type="text/css" href="jquery-ui.css" rel="stylesheet"> 
+    <script src="jquery-1.4.4.min.js" type="text/javascript" charset="utf-8"></script> 
+    <script src="jquery-ui.min.js" type="text/javascript" charset="utf-8"></script> 
 
     <!--                                           -->
     <!-- Any title is fine                         -->
