--- a/MovieMap.html
+++ b/MovieMap.html
@@ -44,8 +44,8 @@
       </div>
     </noscript>
 
-    <h1>Test</h1>
+    <h1>MovieMap</h1>
 
-   <div id="root123"></div>
+   <div id="mainPanel"></div>
   </body>
 </html>
