appengine-web.xml with wql connector added and a little styling (html/css)

--- a/MovieMap.html
+++ b/MovieMap.html
@@ -47,7 +47,7 @@
       </div>
     </noscript>
 	<div style="float:left;"><h1>MovieMap</h1></div>
-	<div style="float:right; width: 600px; height: 300px;"><img src="/banner.gif" /></div>
+	<img style="float:right; width: 400px; height: 200px;" src="/banner.gif" />
 
 	<div id="root123" style="float: center" class="Table"></div>
     
