--- a/MovieMap.html
+++ b/MovieMap.html
@@ -50,7 +50,7 @@
 	<img style="float:right; width: 400px; height: 200px;" src="/banner.gif" />
 
 	<div id="root123" style="float: center" class="Table"></div>
-    
+    <div class="cc"><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" property="dct:title" rel="dct:type">MovieMap</span> von <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Urheber</span> ist lizenziert unter einer <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Namensnennung - Weitergabe unter gleichen Bedingungen 4.0 International Lizenz</a>.</div>
     
   </body>
 </html>
