Different Divs&Fixed SliderSize

--- a/MovieMap.html
+++ b/MovieMap.html
@@ -69,7 +69,8 @@ $(".Showmap-button").click(function () {
     
 });
 </script>
-
+<div id="rootDropdown" style="float: center;display: initial" class="Dropdown"></div>
+<div id="rootNavigation" style="float: center;display: initial" class="Navigation"></div>
 <div id="root123" style="float: center;display: initial" class="Table"></div>
 <div id="rootMap" style="display: none" class="Map">
 <img style="float:initial; width: 800px; height: 400px;" src="/banner.gif" />	
