Upload running-ToDo: Upload form, success page, test button, database id

--- a/MovieMap.html
+++ b/MovieMap.html
@@ -48,6 +48,7 @@
     </noscript>
 	<div style="float:left;"><h1>MovieMap</h1></div>
 	<img style="float:right; width: 400px; height: 200px;" src="/banner.gif" />
+	<a href="/upload">Click here to update the database</a>
 
 	<div id="root123" style="float: center" class="Table"></div>
     
