commented out JS-alert

--- a/MovieMap.html
+++ b/MovieMap.html
@@ -43,7 +43,7 @@
     	
 		var items = [['Country', 'Movies']];
 		
-		alert(countries);
+		//alert(countries);
 		
 		// If one array is shorter than the other, the function  
 		// would iterate over the shorter one to avoid an exception
