--- a/MovieMap.html
+++ b/MovieMap.html
@@ -104,7 +104,7 @@
 
     
 	<div style="float:left;"><h1>MovieMap</h1></div>
-	<img style="float:right; width: 400px; height: 200px;" src="/banner.gif" />
+	<img style="float:right; width: 400px; height: 200px;" src="/banana_2.gif" />
 	<a href="/upload">Click here to update the database</a>
 
 	<div>
@@ -135,7 +135,7 @@
 	<div style="display: initial" class="exportCsv"><a href="#" id="export" role='button'>Export to CSV</a></div>
     <div style="display: none" class="exportPng"><input onclick="captureDiv();" type="submit" value="Export Map to PNG"/></div>
 	<div id="root123" style="float: left;display: initial" class="Table"></div>
-	<div id="regions_div" style="display: none; width: 1350px; height: 750px;" class="Map"></div>	
+	<div id="regions_div" style="float: left;display: none; width: 1350px; height: 750px;" class="Map"></div>	
 	</div>
 	
     <div class="cc"><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />
